# flashr-tui

./: ARCHITECTURE.md  Cargo.toml  README.md
src/: device.rs  flash.rs  iso.rs  lib.rs  logo.txt  main.rs  ui.rs
