[package]
name = "flashr-tui"
version = "0.1.0"
edition = "2021"
authors = ["Anders Persson"]
description = "Fast, safe TUI for flashing Linux ISO images to USB drives"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fisterloegsovs/flashr-tui"
homepage = "https://github.com/fisterloegsovs/flashr-tui"
keywords = ["tui", "usb", "iso", "flashing", "linux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
